<resources>
    <string name="app_name">HumanBodyMonitor</string>

    <string name="rb_password">记住密码</string>
    <string name="user_name">用户名</string>
    <string name="auto_login">自动登录</string>
    <string name="login">登录</string>
    <string name="password">密码</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>